--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todolist-v1",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,15 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexHater/To-Do-List.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AlexHater/To-Do-List/issues"
+  },
+  "homepage": "https://github.com/AlexHater/To-Do-List#readme",
+  "description": ""
 }
